<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".RepeatingAlarmActivity">

    <TextView
        android:id="@+id/tv_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        android:text="@string/txt_set"
        android:textSize="22sp"
        android:textColor="@color/text_gray"
        android:fontFamily="@font/rubik_medium"/>

    <TextView
        android:id="@+id/tv_one_time_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repeating Alarm"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/rubik_medium"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_set"
        app:layout_constraintStart_toStartOf="@+id/tv_set"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_repeating"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_set"
        app:layout_constraintBottom_toBottomOf="@id/tv_one_time_alarm"
        android:contentDescription="@string/image_icon_one_time_alarm"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_white"
        android:layout_margin="25dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_one_time_alarm">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_time_one_time"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="10dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/lightBlue"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_once_time_repeating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/txt_time"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/rubik_regular"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

            <Button
                android:id="@+id/btn_set_time_repeating"
                android:layout_width="95dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:text="@string/txt_set_time"
                android:textSize="11sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/blueText"
                android:layout_gravity="end|center_vertical"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_note_one_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_note"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_medium"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_time_one_time"/>

        <EditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_your_note"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_regular"
            android:backgroundTint="#647aff"
            android:textColor="@color/blueText"
            android:autofillHints="Alarm Now"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/tv_note_one_time"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:text="@string/txt_add_set_alarm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/bg_rounded_blue"
            app:layout_constraintTop_toBottomOf="@id/edt_note"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:textColor="@color/blueText"
            android:background="@drawable/bg_rounded_white_stroke"
            app:layout_constraintTop_toBottomOf="@id/btn_add"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>